[package]
name = "fspeed-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
hkdf = "0.13.0"
rand = "0.10.1"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
